@@ -7,7 +7,7 @@
 %hr
 
 
-= nested_form_for @project, html: { class: 'form-horizontal' } do |f|
+= nested_form_for @project, url: url_for(controller: 'variables', action: 'update'), html: { class: 'form-horizontal' }  do |f|
   - if @project.errors.any?
     #error_explanation
       %p.lead= "#{pluralize(@project.errors.count, "error")} prohibited this project from being saved:"
